<?xml version="1.0"?>
<package format="2">
  <name>cpp_tutorial</name>
  <version>0.0.0</version>
  <description>tuts</description>
  <maintainer email="prsiddharthan92@gmail.com">Siddharthan</maintainer>
  <license>TODO</license>
  <author email="prsiddharthan92@gmail.com">Siddharthan</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
